apps/overlays/stage/patch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bsis-app
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/environment: stage
    spec:
      containers:
        - name: app
